# libgqpid

./: LICENSE  Makefile  README  autogen.sh  configure.ac  gqpid.h  gqpidconnection.cpp  gqpidconnection.h  gqpidmessage.cpp  gqpidmessage.h  gqpidreceiver.cpp  gqpidreceiver.h  gqpidsender.cpp  gqpidsession.cpp  gqpidsession.h
examples/: Makefile  Makefile.am  client.py  receive_list.c  send_list.py  test.c  test2.c  test3.c  test4-client.py  test4-list.c  test4-map.c  test5-client.py  test5.c
src/: Makefile.am  gqpidconnection.cpp  gqpidsender.cpp  gqpidsender.h  gqpidsession.cpp  gqpidsession.h
